tests/rosetta/transpiler/Scala/21-game.scala
// Generated by Mochi v0.10.37 on 2025-07-22 20:23:01 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def parseIntStr(str: String): Int = {
    var i: Int = 0
    var neg: Boolean = false
    if ((str).size > 0 && str.slice(0, 1) == "-") {
      neg = true
      i = 1
    }
    var n: Int = 0
    val digits: Map[String,Int] = Map("0" -> 0, "1" -> 1, "2" -> 2, "3" -> 3, "4" -> 4, "5" -> 5, "6" -> 6, "7" -> 7, "8" -> 8, "9" -> 9)
    while (i < (str).size) {
      n = n * 10 + digits(str.slice(i, i + 1))
      i = i + 1
    }
    if (neg) {
      n = 0 - n
    }
    return n
  }
  
  def main() = {
    var total: Int = 0
    var computer: Boolean = now() % 2 == 0
    println("Enter q to quit at any time\n")
    if (computer) {
      println("The computer will choose first")
    } else {
      println("You will choose first")
    }
    println("\n\nRunning total is now 0\n\n")
    var round: Int = 1
    var done: Boolean = false
    while (!done) {
      println("ROUND " + String.valueOf(round) + ":\n\n")
      var i: Int = 0
      while (i < 2 && !done) {
        if (computer) {
          var choice: Int = 0
          if (total < 18) {
            choice = now() % 3 + 1
          } else {
            choice = 21 - total
          }
          total = total + choice
          println("The computer chooses " + String.valueOf(choice))
          println("Running total is now " + String.valueOf(total))
          if (total == 21) {
            println("\nSo, commiserations, the computer has won!")
            done = true
          }
        } else {
          while (true) {
            println("Your choice 1 to 3 : ")
            val line = input()
            if (line == "q" || line == "Q") {
              println("OK, quitting the game")
              done = true
              break
            }
            var num = parseIntStr(line)
            if (num < 1 || num > 3) {
              if (total + num > 21) {
                println("Too big, try again")
              } else {
                println("Out of range, try again")
              }
              continue
            }
            if (total + num > 21) {
              println("Too big, try again")
              continue
            }
            total = total + num
            println("Running total is now " + String.valueOf(total))
            break
          }
          if (total == 21) {
            println("\nSo, congratulations, you've won!")
            done = true
          }
        }
        println("\n")
        computer = !computer
        i = i + 1
      }
      round = round + 1
    }
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
